# athena-mcp-server

./: .gitignore  .mcp.json  FULL_PROJECT_TESSERACT_SYNTHESIS_2026-03-11.md  MEGALITHIC TOME GENERATOR — “Latent Tunneling _ Multi‑Scale Math Stack (Macro ↔ PZPM ↔ CUT)” _Skeleton_.4d.md  MYCELIUM_TOME_PART1.4d.md  MYCELIUM_TOME_PART1.md  README.md  VOID_CH11.md  athena.ps1  inject_bridges.py  node.yaml
MATH/FINAL FORM/COMPLETE TOMES/AQM - LM - N+7/Q-Phi  Optimization/aqm_kernel_qphi_planet9_v0.2.2_final/aqm_kernel_qphi_planet9/: CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  pyproject.toml
MATH/FINAL FORM/COMPLETE TOMES/AQM - LM - N+7/Q-Phi  Optimization/aqm_kernel_qphi_planet9_v0.2.2_final/aqm_kernel_qphi_planet9/aqm/: addressing.py  certs.py  hashing.py  jets.py  kernel.py  manifest.py  operator_graph.py  store.py
MATH/FINAL FORM/COMPLETE TOMES/AQM - LM - N+7/Q-Phi  Optimization/aqm_kernel_qphi_planet9_v0.2.2_final/aqm_kernel_qphi_planet9/docs/: 03_LENSES.md  04_DATA_PIPELINE.md  06_EXTENDING_AND_CALIBRATION.md  07_AQM_KERNEL.md  (+2 more)
MATH/FINAL FORM/FRAMEWORKS CODE/POLE STAR GEMM - MATRIX MULTIPLICATION/polestargemm_release/python/: pyproject.toml  requirements.txt
MATH/FINAL FORM/FRAMEWORKS CODE/POLE STAR GEMM - MATRIX MULTIPLICATION/polestargemm_release/python/polestargemm/: __init__.py  vision.py
MATH/FINAL FORM/FRAMEWORKS CODE/POLE STAR GEMM - MATRIX MULTIPLICATION/polestargemm_release/python/scripts/: bench_matmul.py  stress_matmul.py
MATH/FINAL FORM/FRAMEWORKS CODE/POLE STAR GEMM - MATRIX MULTIPLICATION/polestargemm_release/python/tests/: test_vision.py
(+14620 files in other folders)
